<resources>
    <string name="app_name">UnionMobile</string>
    <string name="title_activity_bill_payments">Bill Payments</string>
    <string name="title_activity_transfers">Transfers</string>
    <string name="title_activity_mini_statement">MiniStatement</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_withdrawals">Withdrawals</string>
    <string name="title_activity_cash_menu">CashMenu</string>
    <string name="title_activity_coming_soon">Coming Soon</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_card_request">CardRequest</string>
    <string name="title_activity_scheduled_transfers">ScheduledTransfersActivity</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hot_deals">Hot Deals</string>
    <string name="title_activity_markets">Markets</string>
    <string name="title_activity_markets_sub_categories">Sub Category</string>
    <string name="title_activity_lifestyle_products">Products</string>
    <string name="title_activity_existing_user">ExistingUser</string>
    <string name="title_activity_new_user">Welcome</string>
    <string name="title_activity_password_setting">Password Setting</string>
    <string name="title_activity_product_details">Details</string>
    <string name="title_activity_cancel_token">Cancel Token</string>
    <string name="title_activity_home_page_details">Details</string>
    <string name="title_activity_full_statement_alt">FullStatementAlt</string>
    <string name="title_activity_simple_news">Union News</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_news_details">NewsDetails</string>
    <string name="title_activity_request_agent">Map</string>
    <string name="title_activity_new_to_bank">NewToBank</string>
    <string name="title_activity_biller_categories">BillerCategories</string>
    <string name="title_activity_device_replacement_otp">DeviceReplacementOTP</string>
    <string name="title_activity_saved_beneficiary_transfer">SavedBeneficiaryTransfer</string>
    <string name="title_activity_request_history">RequestHistory</string>
    <string name="action_sort">Sort</string>
    <string name="action_home">Overview</string>
    <string name="action_profile">Profile</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_open">Open</string>
    <string name="short_name">Nearest ATMs</string>
    <string name="short_name_full">Display all ATMs around my current occasion</string>
    <string name="short_name_disabled">Service disabled</string>
    <string name="short_name_branch">Nearest Branch</string>
    <string name="short_name_full_branch">Display all Branches around my current occasion</string>
    <string name="short_name_disabled_branch">Service disabled</string>
    <string name="short_name_atm">ATM Analytics</string>
    <string name="short_name_full_atm">Go to ATM Analytics page for ATM Monitoring</string>
    <string name="short_name_disabled_atm">Service disabled</string>
    <string name="permission_rationale_location">Access to the location service is required to show you Location service around you</string>
    <string name="location_permission_denied">App requires location permission to work. Please grant access to use the location or try again.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Union Bank\'.</string>
    <string name="permission_required_toast">Unable to get permission to used Device Location, please try again</string>
    <string name="title_activity_management">ATM Status</string>
    <string name="title_activity_start_stop_card">Card Services</string>
    <string name="title_activity_debit_card_validation">DebitCardValidation</string>
    <string name="title_activity_transaction_history">TransactionHistory</string>
    <string name="title_activity_transfers_history">TransfersHistory</string>
    <string name="title_activity_inside_offers">InsideOffers</string>
    <string name="title_activity_within_bank">WithinBankActivity</string>
    <string name="title_activity_dashboard_alt">DashboardAlt</string>
    <string name="title_activity_flutter_test">FlutterTest</string>
    <string name="title_activity_expanded_dash_board">ExpandedDashBoard</string>
    <string name="title_activity_term_deposit_details">Term Deposit</string>
    <string name="title_activity_merchants_list">MerchantsList</string>
    <string name="title_activity_reference_entry">ReferenceEntry</string>
    <string name="title_activity_pay_merchant">PayMerchant</string>
    <string name="title_activity_loan_details">LoanDetails</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="account_types">
        <item>Bank Account</item>
        <item>Wallet Account</item>
    </string-array>
    <string name="title_activity_rev_pay_ref">RevPayRef</string>
    <string name="title_activity_rev_pay_confirm">RevPayConfirm</string>
    <string name="title_activity_own_accounts">OwnAccountsActivity</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="surname">Surname</string>
    <string name="middle_name">Middle name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="enter_your_bvn">Enter Your BVN</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="back">Back</string>
    <string name="proceed">Proceed</string>
    <string name="initial_deposit_amount">Initial Deposit Amount</string>
</resources>