<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.ceva.ubmobile.core.signon.newtobank.CustomerDetails">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp">

            <LinearLayout
                android:id="@+id/general_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/step_header"/>

                <TextView
                    android:layout_marginTop="20dp"
                    style="@style/FormLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_deposit_amount"/>

                <EditText
                    android:id="@+id/initialDeposit"
                    style="@style/AppTheme.Widget.EditText"
                    android:layout_width="match_parent"
                    android:inputType="number"/>
                <TextView
                    android:id="@+id/genderTxt"
                    style="@style/FormLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_select_your_gender"/>

                <Spinner

                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/rectangle_clouds_border"
                    android:entries="@array/gender"
                    android:padding="4dp"/>

                <TextView
                    android:id="@+id/bvnTxt"
                    style="@style/FormLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_bvn"/>

                <EditText
                    android:id="@+id/BVN"
                    style="@style/AppTheme.Widget.EditText"
                    android:layout_width="match_parent"
                    android:inputType="number"/>

                <LinearLayout
                    android:id="@+id/otherFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FormLabels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"/>

                    <EditText
                        android:id="@+id/firstname"
                        style="@style/AppTheme.Widget.EditText"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/FormLabels"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/middle_name"/>

                            <EditText
                                android:id="@+id/middlename"
                                style="@style/AppTheme.Widget.EditText"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/FormLabels"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/surname"/>

                            <EditText
                                android:id="@+id/surname"
                                style="@style/AppTheme.Widget.EditText"/>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        style="@style/FormLabels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_birth"/>

                    <EditText
                        android:id="@+id/dateOfBirth"
                        style="@style/AppTheme.Widget.EditText"
                        android:focusable="false"
                        android:hint="@string/dd_mm_yyyy"
                        android:inputType="none"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/genderForOtherView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/FormLabels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/please_select_your_gender"/>

                    <Spinner

                        android:id="@+id/genderForOther"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="2dp"
                        android:background="@drawable/rectangle_clouds_border"
                        android:entries="@array/gender"
                        android:padding="4dp"/>
                </LinearLayout>

                <TextView
                    style="@style/FormLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>

                <EditText
                    android:id="@+id/email"
                    style="@style/AppTheme.Widget.EditText"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_gravity="center|bottom"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                style="@style/AppTheme.Widget.Button"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:gravity="center"
                android:text="@string/back"/>

            <View
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnProceed"
                style="@style/AppTheme.Widget.Button"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|right"
                android:text="@string/proceed"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
